--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
     <artifactId>commons-dataset-jaxb</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>commons-dataset-jaxb</name>
-    <repositories>
+    <name>Commons - Dataset JaxB</name>
+    <distributionManagement>
         <repository>
-            <id>nexus-release</id>
-            <name>Nexus release repository for IMR</name>
-            <url>http://javadev.imr.no:8081/nexus/content/repositories/releases/</url>
+            <id>nexus-releases</id>
+            <url>https://build.imr.no/nexus/content/repositories/releases</url>
         </repository>
-        <repository>
-            <id>repository.springsource.milestone</id>
-            <name>SpringSource Milestone Repository</name>
-            <url>http://repo.springsource.org/milestone</url>
-        </repository>
-    </repositories>
+    </distributionManagement>
+    <scm>
+        <connection>scm:git:git@github.com:Institute-of-Marine-Research-NMD/commons-dataset-jaxb.git</connection>
+        <url>scm:git:git@github.com:Institute-of-Marine-Research-NMD/commons-dataset-jaxb.git</url>
+        <developerConnection>scm:git:git@github.com:Institute-of-Marine-Research-NMD/commons-dataset-jaxb.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jaxb.version>2.1.17</jaxb.version>
@@ -68,6 +68,44 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <releaseProfiles>release</releaseProfiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
