--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
                 <artifactId>maven-jaxb21-plugin</artifactId>
-                <version>0.11.0</version>
+                <version>0.12.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -43,6 +43,7 @@
                             <episode>true</episode>
                             <extension>true</extension>
                             <generatePackage>no.imr.nmd.commons.dataset.jaxb</generatePackage>
+                            <forceRegenerate>true</forceRegenerate>
                             <args>
                                 <arg>-Xannotate</arg>
                                 <arg>-Xnamespace-prefix</arg>
@@ -74,6 +75,19 @@
                 <configuration>
                     <releaseProfiles>release</releaseProfiles>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
