--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>no.imr.nmd.commons.dataset.jaxb</groupId>
     <artifactId>commons-dataset-jaxb</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Commons - Dataset JaxB</name>
     <distributionManagement>
@@ -21,6 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jaxb.version>2.1.17</jaxb.version>
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     </properties>
     <build>
         <plugins>
@@ -90,6 +91,15 @@
                 </executions>
             </plugin>
         </plugins>
+    <pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+            </plugin>
+        </plugins>
+    </pluginManagement>
     </build>
     <profiles>
         <profile>
@@ -122,4 +132,5 @@
             </build>
         </profile>
     </profiles>
+
 </project>
