--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>no.imr.nmd.commons.dataset.jaxb</groupId>
     <artifactId>commons-dataset-jaxb</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Commons - Dataset JaxB</name>
     <distributionManagement>
@@ -21,6 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jaxb.version>2.1.17</jaxb.version>
+        <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
     <build>
         <plugins>
