Use autogenerated package-info

--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,27 @@
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
                 <artifactId>maven-jaxb21-plugin</artifactId>
-                <version>0.11.0</version>
+                <version>0.13.0</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <packageLevelAnnotations>false</packageLevelAnnotations>
-                            <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
-                            <forceRegenerate>true</forceRegenerate>
+                            <packageLevelAnnotations>true</packageLevelAnnotations>
+                            <schemas>
+                                <schema>
+                                    <fileset>
+                                        <directory>${basedir}/src/main/resources</directory>
+                                        <includes>
+                                            <include>datasetv1.xsd</include>
+                                        </includes>
+                                        <excludes>
+                                            <exclude>*.*</exclude>
+                                        </excludes>
+                                    </fileset>
+                                </schema>
+                            </schemas>
                             <generateDirectory>${project.build.directory}/generated-sources/xjc</generateDirectory>
                             <verbose>true</verbose>
                             <bindingDirectory>${basedir}/src/main/bindings</bindingDirectory>
